# iopac2calendar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.rs  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: images.yml
src/: config.rs  iopac.rs  main.rs
src/iopac2calendar/: __main__.py  config.py  ics_calendar.py  iopac.py  server.py
