[package]
name = "iopac"
version = "0.1.0"
edition = "2024"
authors = ["HDer-Henning"]
description = "An IOPAC to iCalendar bridge."

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive", "env"] }
encoding = "0.2.33"
env_logger = "0.11.8"
futures = "0.3.31"
icalendar = "0.17.3"
itertools = "0.14.0"
log = "0.4.28"
md5 = "0.8.0"
regex = "1.11.2"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1", features = [ "derive" ] }
serde_html_form = "0.2.7"
serde_yaml = "0.9"
table-extract = "0.2.3"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
uuid = "1"

[profile.release]
lto = 'fat'
opt-level = 3
