[package]
name = "iopac"
version = "0.1.0"
edition = "2024"
authors = [ "Der-Henning" ]
description = "An IOPAC to iCalendar bridge."

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = [ "derive", "env" ] }
encoding = "0.2"
env_logger = "0.11"
futures = "0.3"
icalendar = "0.17"
itertools = "0.14"
log = "0.4"
md5 = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls" ]}
scraper = "0.24"
serde = { version = "1", features = [ "derive" ] }
serde_html_form = "0.2"
serde_yaml = "0.9"
table-extract = "0.2"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
uuid = "1"

[profile.release]
lto = 'fat'
opt-level = 3
