[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
authors = [{name = "Henning Merklinger", email = "henning.merklinger@gmail.com"}]
dependencies = []
description = ""
name = "iopac2calendar"
packages = [
  {include = "iopac2calendar", from = "src"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.10.4"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
ics = "^0.7.2"
lxml = "^5.2.1"
omegaconf = "^2.3.0"
pandas = "^2.1.2"
python-dotenv = "^1.0.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pre-commit = "^4.0.1"
